--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babylonjs/core": "^8.52.0",
+    "@babylonjs/gui": "^8.52.0",
+    "@babylonjs/loaders": "^8.52.0",
+    "@babylonjs/materials": "^8.52.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.10.1",
     "sass": "^1.94.2"
   },
   "devDependencies": {
+    "@babylonjs/inspector": "^8.52.0",
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
